Fixed Server Icons not Being Aligned

--- a/discorddark.css
+++ b/discorddark.css
@@ -802,8 +802,9 @@ h2.name-3BUDLf, h2.membersGroup-2eiWxl, .name-3BUDLf .overflow-1wOqNV {
   width: 90px;
 }
 
-.wrapper-38slSD {
-  margin-left: -3px;
+.scroller-3X7KbA > div > .listItem-3SmSlK {
+  position: relative !important;
+  left: -4px !important;
 }
 
 #app-mount .blobContainer-ikKyFs:active, #app-mount .listItemWrapper-3d87LP:active {
